[gd_scene load_steps=3 format=3 uid="uid://cqul01thxosc3"]

[ext_resource type="Script" path="res://Lamp.gd" id="1_f2786"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nwxxy"]
radius = 74.2859
height = 902.857

[node name="Lamp" type="StaticBody2D"]
position = Vector2(221, 269)
script = ExtResource("1_f2786")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.15, 0.15)
shape = SubResource("CapsuleShape2D_nwxxy")

[node name="LampLight" type="Area2D" parent="."]
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="LampLight"]
position = Vector2(0, 19.25)
scale = Vector2(0.187, 0.1935)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LampLight"]
build_mode = 1
polygon = PackedVector2Array(-6, -58, -74, 98, -61, 108, -15, 114, 49, 111, 70, 103, 76, 98, 3, -58)

[connection signal="Light_Drift_Ready" from="." to="." method="_on_light_drift_ready"]
[connection signal="area_entered" from="LampLight" to="." method="_on_lamp_light_area_entered"]
